# hell

./: .Dockerfile-chrisdone  .ghci  .gitattributes  .gitignore  0readme.md  DIST  Dockerfile  Hell.hs  LICENSE  README.md  brossa.cabal  flake.nix  hell.cabal  hell.hs  install.md  package.yaml  readme.md  stack.yaml
.github/workflows/: docs.yaml  haskell.yml  main.yml
docs/: index.html  index.js  readme.md  style.css
docs/api/: index.html
docs/examples/: index.html
examples/: 01-hello-world.hell  02-interaction.hell  03-press-any-key.hell  04-writing-files.hell  05-lists.hell  06-polymorphism.hell  07-loops.hell  08-tuples.hell  09-processes.hell  10-current-directory.hell  11-env-vars.hell  111-js.hell  12-fib.hell  13-concurrency.hell  14-text.hell  15-type-classes.hell  16-if.hell  17-reuse.hell  17-type-inference.hell  18-monads.hell  19-blog-generator.hell  20-dollar.hell  21-json.hell  21-records.hell  23-args.hell  24-exitcode.hell  25-sum-types.hell  26-reference-other-types.hell  27-discussion-64.hell  28-trees.hell  29-temp-files.hell  30-process-handlers.hell  31-open-file-handle.hell  32-optparse.hell  33-null-stream.hell  34-field-puns.hell  35-type-sigs.hell  36-present.hell  36-these.hell  37-readshow.hell  (+7 more)
scripts/: check-docs.hell  check.hell  gen-docs.ghci  gen-docs.hell  install-hell.hell  readme.md  static-build.hell  static-build.sh
src/: Hell.hs
src/Hell/: Bin.hs  Prelude.hs  Shell.hs  TH.hs  Types.hs  Unix.hs  Win32.hs
src/main/: Main.hs  Shellish.hs  Shelly.hs
