name:                hell
version:             0.0.1
synopsis:            hell
description:         hell
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2013 Chris Done
category:            Shell
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   Hell, Hell.Types, Hell.Unix
  hs-source-dirs:    src/
  build-depends:     utf8-string >= 0.3.7,
                     transformers >= 0.3.0.0,
                     base > 4 && <5,
                     process,
                     bytestring,
                     haskeline,
                     ghc,
                     ghc-paths,
                     directory,
                     data-default,
                     pdfinfo,
                     text,
                     filepath,
                     mtl,
                     unix,
                     monad-extras

  if impl(ghc >= 7.6)
    build-depends:   time
  else
    cpp-options:     -DUSE_OLD_TIME
    build-depends:   old-time
  ghc-options:       -Wall -threaded

executable hell
  main-is:           Main.hs
  hs-source-dirs:    src/main
  build-depends:     utf8-string >= 0.3.7,
                     transformers >= 0.3.0.0,
                     base > 4 && <5,
                     hell
  ghc-options:       -Wall -threaded
